correction bug id ok

--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -26,8 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Intitulé"
+        android:hint="@string/intitule_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Description"
+        android:hint="@string/description_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/textview_margintop_form"
+        android:autofillHints=""
+        android:inputType="text"
         android:width="@dimen/edittextsize_form"
-        android:hint="Professeur"
+        android:hint="@string/professeur_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +84,7 @@
         android:layout_marginEnd="44dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
-        android:text="Retour"
+        android:text="@string/retour_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mf_professeur_ctrl" />
@@ -90,7 +96,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="81dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Intitulé :"
+        android:text="@string/intitule_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/mf_intitule_ctrl"
         app:layout_constraintHorizontal_bias="0.281"
@@ -104,7 +110,7 @@
         android:layout_marginLeft="@dimen/textview_margin_form"
         android:layout_marginTop="64dp"
         android:layout_marginRight="@dimen/textview_margin_form"
-        android:text="Description :"
+        android:text="@string/description_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/mf_description_ctrl"
         app:layout_constraintHorizontal_bias="0.477"
@@ -119,7 +125,7 @@
         android:layout_marginTop="67dp"
         android:layout_marginRight="@dimen/textview_margin_form"
         android:layout_marginBottom="376dp"
-        android:text="Professeur :"
+        android:text="@string/professeur_txt"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/mf_professeur_ctrl"
