correction bug id ok

--- a/app/src/main/res/layout/activity_eleve_add.xml
+++ b/app/src/main/res/layout/activity_eleve_add.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="100dp"
-        android:text="Nom : "
+        android:text="@string/nom_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ea_nom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="16dp"
-        android:hint="Nom"
+        android:autofillHints=""
+        android:hint="@string/nom_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_nom_tv"
         app:layout_constraintTop_toBottomOf="@+id/ea_title_tv" />
@@ -49,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
-        android:text="Prénom :"
+        android:text="@string/prenom_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ea_prenom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +64,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:hint="Prénom"
+        android:autofillHints=""
+        android:hint="@string/prenom_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_prenom_tv"
         app:layout_constraintTop_toBottomOf="@+id/ea_nom_ctrl" />
@@ -73,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="52dp"
-        android:text="Date de naissance :"
+        android:text="@string/date_naissance_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ea_date_naissance_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +90,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="16dp"
-        android:hint="Date de naissance"
+        android:autofillHints=""
+        android:hint="@string/date_naissance_txt"
+        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_date_naissance_tv"
         app:layout_constraintTop_toBottomOf="@+id/ea_prenom_ctrl" />
@@ -97,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
-        android:text="Email :"
+        android:text="@string/email_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ea_email_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +116,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:hint="Email"
+        android:autofillHints=""
+        android:hint="@string/email_txt"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_email_tv"
         app:layout_constraintTop_toBottomOf="@+id/ea_date_naissance_ctrl" />
@@ -121,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="52dp"
-        android:text="Téléphone :"
+        android:text="@string/telephone_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ea_telephone_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +142,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:hint="Téléphone"
+        android:autofillHints=""
+        android:hint="@string/telephone_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_telephone_tv"
         app:layout_constraintTop_toBottomOf="@+id/ea_email_ctrl" />
@@ -147,7 +157,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/cnam"
-        android:text="Création"
+        android:text="@string/valider_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/ea_back_to_list_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +171,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/cnam"
-        android:text="Retour"
+        android:text="@string/retour_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ea_save_btn"
