correction bug id ok

--- a/app/src/main/res/layout/activity_eleve_edit.xml
+++ b/app/src/main/res/layout/activity_eleve_edit.xml
@@ -49,7 +49,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Nom"
+        android:autofillHints=""
+        android:hint="@string/nom_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_nom_tv"
         app:layout_constraintTop_toBottomOf="@+id/ee_title_tv" />
@@ -60,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Nom : "
+        android:text="@string/nom_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ee_nom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +75,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:hint="Prénom"
+        android:autofillHints=""
+        android:hint="@string/prenom_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_prenom_tv"
         app:layout_constraintTop_toBottomOf="@+id/ee_nom_ctrl" />
@@ -84,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Prénom :"
+        android:text="@string/prenom_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ee_prenom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +101,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Date de naissance"
+        android:autofillHints=""
+        android:hint="@string/date_naissance_txt"
+        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_date_naissance_tv"
         app:layout_constraintTop_toBottomOf="@+id/ee_prenom_ctrl" />
@@ -108,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Date de naissance :"
+        android:text="@string/date_naissance_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ee_date_naissance_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +127,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
-        android:hint="Email"
+        android:autofillHints=""
+        android:hint="@string/email_txt"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_email_tv"
         app:layout_constraintTop_toBottomOf="@+id/ee_date_naissance_ctrl" />
@@ -132,7 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Email :"
+        android:text="@string/email_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ee_email_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +153,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Téléphone"
+        android:autofillHints=""
+        android:hint="@string/telephone_txt"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_telephone_tv"
         app:layout_constraintTop_toBottomOf="@+id/ee_email_ctrl" />
@@ -156,7 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
-        android:text="Téléphone :"
+        android:text="@string/telephone_txt"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/eef_telephone_ctrl"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +180,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/cnam"
-        android:text="Retour"
+        android:text="@string/retour_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ee_save_btn"
@@ -184,7 +194,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/cnam"
-        android:text="Création"
+        android:text="@string/valider_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/ee_back_to_list_btn"
         app:layout_constraintStart_toStartOf="parent"
