--- a/app/src/main/res/layout/eleve_list_item2.xml
+++ b/app/src/main/res/layout/eleve_list_item2.xml
@@ -39,7 +39,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="144dp"
-        android:layout_toEndOf="@+id/eli2_prenom_tv" />
+        android:layout_marginEnd="70dp" />
 
 </RelativeLayout>
