--- a/app/src/main/res/layout/matiere_list_item2.xml
+++ b/app/src/main/res/layout/matiere_list_item2.xml
@@ -23,10 +23,9 @@
         android:id="@+id/mli2_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="false"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="30dp"
-        android:layout_toEndOf="@+id/mli2_intitule_tv" />
+        android:layout_marginEnd="50dp" />
 
 
 </RelativeLayout>
