--- a/app/src/main/res/layout/activity_eleve_list.xml
+++ b/app/src/main/res/layout/activity_eleve_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_def"
-        android:text="@string/titre_list"
+        android:text="@string/titre_listEleve"
         android:textSize="@dimen/titlesize_def"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
