--- a/app/src/main/res/layout/eleve_list_item2.xml
+++ b/app/src/main/res/layout/eleve_list_item2.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginEnd="0dp"
         android:paddingTop="@dimen/padding_def"
         android:paddingBottom="@dimen/padding_def"
         android:text="@string/nom_txt"
@@ -23,8 +22,8 @@
         android:id="@+id/eli2_prenom_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginStart="@dimen/margin_def"
+        android:layout_toStartOf="@+id/eli2_checkbox"
         android:layout_toEndOf="@+id/eli2_nom_tv"
         android:paddingTop="@dimen/padding_def"
         android:paddingBottom="@dimen/padding_def"
@@ -39,7 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="144dp"
-        android:layout_toEndOf="@+id/eli2_prenom_tv" />
+        android:layout_marginStart="@dimen/margin_def" />
 
 </RelativeLayout>
